README.md fleshed out built automation small layout fixes

--- a/less/main.less
+++ b/less/main.less
@@ -25,6 +25,7 @@ h6 {
 
 section {
 	display: block;
+	margin-top: 45px;
 }
 
 
@@ -40,6 +41,7 @@ footer {
 
 article {
 	text-align: center;
+	cursor: pointer;
 }
 
 article img {
@@ -63,9 +65,9 @@ article img {
 }
 
 .hr {
-	border-bottom: 2px solid #7d97ad;
+	border-bottom: 1px solid #7d97ad;
 	margin: 0 0 5px 0;
-	height: 2px;
+	height: 1px;
 	width: 100%;
 
 }
